--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -1,13 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRODUCTOS</title>
-</head>
-<body>
-   <H1>PRODUCTOS</H1> 
-   {{body}}
-</body>
-</html>
+{{#if products.length}}
+    {{#each products}}
+    <div class="card" style="width: 18rem; margin-left: 20px; margin-bottom: 20px">
+        <img src={{thumbnail}} class="card-img-top" alt="imagen">
+        <div class="card-body">
+            <h5 class="card-title">{{titulo}}</h5>
+            <p class="card-text">{{descripcion}}</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Precio: {{precio}}</li>
+            <li class="list-group-item">Stock: {{stock}}</li>
+            <li class="list-group-item">Categoria: {{categoria}}</li>
+        </ul>
+    </div>
+    {{/each}}
+
+{{else}}
+<h2>Producto no encontrado</h2>
+{{/if}}
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
