--- a/views/layouts/realTimeProducts.handlebars
+++ b/views/layouts/realTimeProducts.handlebars
@@ -1,13 +1,24 @@
-<h3> AGREGAR PRODUCTOS</h3>
-
-<form>
-    nombre: <input type="text" name="nombre" id="nombre">
-    tipo de producto: <input type="text" name="tipo" id="tipo">
+<div id="cards" class="card">
+</div>
+<h1 style="margin-left: 20px;">AGREGAR PRODUCTO:</h1>
+<br>
+<iframe name="iframe" style="display:none;"></iframe>
+<form style="margin-left: 20px;" action="/realtimeproducts" method="post" id="formulario" target="iframe">
+    Titulo: <input type="text" name="title" id="title">
+    Descripcion: <input type="text" name="descripcion" id="descripcion">
+    Codigo: <input type="text" name="codigo" id="codigo">
+    Precio: <input type="number" name="precio" id="precio">
+    Stock: <input type="number" name="stock" id="stock">
+    Categoria: <input type="text" name="categoria" id="categoria">
+    <input type="submit" value="Agregar producto">
 </form>
-
-<h3>LISTA DE PRODUCTOS</h3>
 
 
 
 <script src="/socket.io/socket.io.js"></script>
-<script src='index.js'></script>
+<script src='/public/index.js'></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
