--- a/views/registro.handlebars
+++ b/views/registro.handlebars
@@ -7,3 +7,6 @@
     <input type="password" name="password" id="password" placeholder="Ingresa tu contraseña">
     <input type="submit" value="crear">
 </form>
+
+<h2>REGISTRATE CON DISCORD</h2>
+<button onclick="location.href='/users/registroDiscord'" >DISCORD </button>
